# UMU-Sales-Trainer

./: .env.example  .gitignore  LICENSE  README.md  init_db.py  init_knowledge.py  pyproject.toml  ruff.toml  tasks.md
data/customer_profiles/: endocrinologist.yaml
data/knowledge/: excellent_samples.yaml  objection_handling.yaml  product_knowledge.yaml
data/products/: hypoglycemic_drug.yaml
docs/: api.md  architecture.md  getting-started.md  testing.md
src/umu_sales_trainer/: __init__.py  config.py  main.py
src/umu_sales_trainer/api/: middleware.py  router.py
src/umu_sales_trainer/core/: analyzer.py  evaluator.py  guidance.py  hybrid_search.py  response_predictor.py  simulator.py  workflow.py
src/umu_sales_trainer/models/: __init__.py  conversation.py  customer.py  evaluation.py  product.py  semantic.py
src/umu_sales_trainer/repositories/: config_repo.py
src/umu_sales_trainer/services/: __init__.py  chroma.py  database.py  embedding.py  llm.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_analyzer.py  test_chroma_integration.py  test_config_integration.py  test_database_integration.py  test_embedding_integration.py  test_evaluator.py  test_frontend_comprehensive.py  test_guidance.py  test_llm_integration.py  test_services.py  test_workflow.py
